--- a/requirements.txt
+++ b/requirements.txt
@@ -1,54 +1,260 @@
 aiohttp==3.8.4
+aiohttp-cors==0.7.0
+aiopg==1.4.0
 aiosignal==1.3.1
+altair==5.2.0
+annotated-types==0.6.0
+ansi2html==1.9.1
+ansicon==1.89.0
+anyio==3.7.1
+appdirs==1.4.4
+APScheduler==3.10.4
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
 asgiref==3.6.0
+astor==0.8.1
 asttokens==2.2.1
+async-lru==2.0.4
 async-timeout==4.0.2
 attrs==23.1.0
+Babel==2.14.0
 backcall==0.2.0
+backoff==2.2.1
+beautifulsoup4==4.12.2
+bleach==6.1.0
+blessed==1.20.0
+blinker==1.6.2
+cachetools==5.3.1
+category-encoders==2.6.3
 certifi==2023.5.7
+cffi==1.15.1
+chardet==5.2.0
 charset-normalizer==3.1.0
+click==8.1.3
+cloudpickle==3.0.0
 colorama==0.4.6
+colorful==0.5.6
+comm==0.1.4
 contourpy==1.0.7
+croniter==1.4.1
+cryptography==41.0.1
 cycler==0.11.0
+Cython==3.0.6
+dash==2.14.2
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-table==5.0.0
+dask==2023.12.1
+dateutils==0.6.12
+debugpy==1.6.7.post1
 decorator==5.1.1
+defusedxml==0.7.1
+Deprecated==1.2.14
+deprecation==2.1.0
+distlib==0.3.8
+distributed==2023.12.1
 Django==4.1.7
+docutils==0.20.1
+duckdb==0.9.2
+exceptiongroup==1.1.3
 executing==1.2.0
+Faker==22.0.0
+fastjsonschema==2.18.0
+filelock==3.12.2
+Flask==3.0.0
 fonttools==4.39.0
+fqdn==1.5.1
+frozendict==2.3.8
 frozenlist==1.3.3
+fsspec==2023.12.2
+google-api-core==2.15.0
+google-auth==2.26.1
+googleapis-common-protos==1.62.0
+gpustat==1.1.1
 greenlet==2.0.2
+grpcio==1.60.0
+gw_dsl_parser==0.1.38
+h11==0.14.0
+html5lib==1.1
+humanize==4.8.0
 idna==3.4
+imbalanced-learn==0.11.0
+importlib-metadata==6.8.0
 importlib-resources==5.12.0
+ipykernel==6.25.1
 ipython==8.11.0
+ipyvue==1.9.2
+ipyvuetify==1.8.10
+ipywidgets==8.1.0
+isoduration==20.11.0
+itsdangerous==2.1.2
 jedi==0.18.2
 Jinja2==3.1.2
+jinxed==1.2.1
+joblib==1.3.2
+json5==0.9.14
+jsonpointer==2.4
+jsonschema==4.19.0
+jsonschema-specifications==2023.7.1
+jupyter==1.0.0
+jupyter-console==6.6.3
+jupyter-events==0.9.0
+jupyter-lsp==2.2.1
+jupyter_client==8.3.0
+jupyter_core==5.3.1
+jupyter_server==2.12.2
+jupyter_server_terminals==0.5.1
+jupyterlab==4.0.10
+jupyterlab-widgets==3.0.8
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.25.2
+kaleido==0.2.1
+kanaries_track==0.0.3
 kiwisolver==1.4.4
+lightgbm==4.1.0
+llvmlite==0.41.1
+locket==1.0.0
+lxml==4.9.2
+Markdown==3.4.4
+markdown-it-py==3.0.0
 MarkupSafe==2.1.2
-matplotlib==3.7.1
+matplotlib==3.6.0
 matplotlib-inline==0.1.6
+mdurl==0.1.2
+mistune==3.0.2
+modin==0.22.3
+modin-spreadsheet==0.1.2
+monotonic==1.6
+msgpack==1.0.7
 multidict==6.0.4
+multitasking==0.0.11
+nbclient==0.9.0
+nbconvert==7.14.0
+nbformat==5.9.2
+nest-asyncio==1.5.7
+nine==1.1.0
+notebook==7.0.6
+notebook_shim==0.2.3
+numba==0.58.1
 numpy==1.24.2
+nvidia-ml-py==12.535.133
+opencensus==0.11.4
+opencensus-context==0.1.3
+orjson==3.9.10
+overrides==7.4.0
 packaging==23.0
-pandas==2.0.0rc0
+pandas==1.5.3
+pandocfilters==1.5.0
 parso==0.8.3
+partd==1.4.1
+patsy==0.5.4
 pickleshare==0.7.5
 Pillow==9.4.0
+platformdirs==3.10.0
+plotly==5.18.0
+plotly-resampler==0.9.1
+pmdarima==2.0.4
+prometheus-client==0.19.0
 prompt-toolkit==3.0.38
+protobuf==4.25.1
+psutil==5.9.5
 psycopg2-binary==2.9.5
 pure-eval==0.2.2
+py-spy==0.3.14
+pyarrow==14.0.2
+pyasn1==0.5.1
+pyasn1-modules==0.3.0
+pycaret==3.2.0
+pycparser==2.21
+pydantic==1.10.13
+pydantic_core==2.14.6
 Pygments==2.14.0
-pygwalker==0.1.8
+pygwalker==0.3.20
+pymdown-extensions==10.1
+pyod==1.1.2
 pyparsing==3.0.9
+PyQt6-Qt6==6.5.1
+PyQt6-sip==13.5.1
 python-dateutil==2.8.2
+python-json-logger==2.0.7
 pytz==2022.7.1
-requests==2.30.0
+pywin32==306
+pywinpty==2.0.12
+PyYAML==6.0.1
+pyzmq==25.1.1
+Qt.py==1.3.8
+qtconsole==5.5.1
+QtPy==2.4.1
+ray==2.9.0
+reacton==1.7.1
+referencing==0.30.2
+requests==2.31.0
+retrying==1.3.4
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rich==13.5.2
+rich-click==1.6.1
+rpds-py==0.9.2
+rsa==4.9
+schedule==1.2.0
+schemdraw==0.15
+scikit-base==0.5.2
+scikit-learn==1.2.2
+scikit-plot==0.3.7
+scipy==1.10.1
+segment-analytics-python==2.2.3
+Send2Trash==1.8.2
 six==1.16.0
-SQLAlchemy==2.0.5.post1
+sktime==0.21.1
+smart-open==6.4.0
+sniffio==1.3.0
+solara==1.25.0
+sortedcontainers==2.4.0
+soupsieve==2.4.1
+SQLAlchemy==2.0.23
+sqlglot==20.4.0
 sqlparse==0.4.3
 stack-data==0.6.2
+starlette==0.31.0
+statsmodels==0.14.1
+tabulate==0.9.0
+tbats==1.1.3
+tblib==3.0.0
+tenacity==8.2.3
+terminado==0.18.0
+threadpoolctl==3.2.0
+tinycss2==1.2.1
+tomli==2.0.1
+toolz==0.12.0
+tornado==6.3.3
+tqdm==4.66.1
+trace-updater==0.0.9.1
 traitlets==5.9.0
-typing-extensions==4.5.0
+tsdownsample==0.1.2
+types-PySide2==5.15.2.1.5
+types-python-dateutil==2.8.19.14
+typing_extensions==4.9.0
 tzdata==2022.7
+tzlocal==5.2
+uri-template==1.3.0
 urllib3==2.0.2
+uvicorn==0.23.2
+virtualenv==20.21.0
+wasmtime==12.0.0
+watchdog==3.0.0
+watchfiles==0.21.0
 wcwidth==0.2.6
+webcolors==1.13
+webencodings==0.5.1
+websocket-client==1.7.0
+websockets==11.0.3
+Werkzeug==3.0.1
+widgetsnbextension==4.0.8
+wrapt==1.16.0
+xxhash==3.4.1
 yarl==1.9.2
+yellowbrick==1.5
+yfinance==0.2.20
+zict==3.0.0
 zipp==3.15.0
